--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^10.0.0",
         "@prisma/client": "^5.0.0",
+        "@types/bcryptjs": "^2.4.2",
+        "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "reflect-metadata": "^0.1.13",
