--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,28 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.16",
+        "@hookform/resolvers": "^3.1.1",
+        "@radix-ui/react-dialog": "^1.0.4",
+        "@radix-ui/react-dropdown-menu": "^2.0.5",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "^1.0.6",
+        "@radix-ui/react-select": "^1.2.2",
+        "@tanstack/react-query": "^4.32.0",
+        "@tanstack/react-query-devtools": "^4.32.0",
+        "axios": "^1.4.0",
+        "clsx": "^2.0.0",
+        "date-fns": "^2.30.0",
         "react": "^18.2.0",
+        "react-day-picker": "^8.8.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.16.0"
+        "react-hook-form": "^7.45.2",
+        "react-hot-toast": "^2.4.1",
+        "react-number-format": "^5.2.2",
+        "react-router-dom": "^6.14.2",
+        "swiper": "^10.0.4",
+        "tailwind-merge": "^1.14.0",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
