--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-popover": "^1.0.6",
         "@radix-ui/react-select": "^1.2.2",
+        "@radix-ui/react-toggle-group": "^1.0.4",
         "@tanstack/react-query": "^4.32.0",
         "@tanstack/react-query-devtools": "^4.32.0",
         "axios": "^1.4.0",
