--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,14 +42,17 @@
         "@vitejs/plugin-react-swc": "^3.3.2",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.50.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-config-standard-with-typescript": "^39.1.0",
-        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-n": "^16.1.0",
+        "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "postcss": "^8.4.30",
+        "prettier": "^3.0.3",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.2.2",
         "vite": "^4.4.5"
