--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://root:root@db:5432/fincheck?schema=public"
+DABATESE_HOST=fincheck-db
+DATABASE_URL="postgresql://root:root@${DABATESE_HOST}:5432/fincheck?schema=public"
 JWT_SECRET=tokenjwt
 DB_USER=root
 DB_PASSWORD=root
