--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.16",
@@ -35,6 +36,8 @@
         "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.1.5",
+        "@testing-library/react": "^14.1.2",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.7.3",
@@ -51,10 +54,12 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "jsdom": "^23.0.1",
         "postcss": "^8.4.30",
         "prettier": "^3.0.3",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.2.2",
-        "vite": "^4.4.5"
+        "vite": "^4.4.5",
+        "vitest": "^1.0.1"
     }
 }
