--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "test": "vitest"
+        "test": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.16",
@@ -43,6 +44,8 @@
         "@typescript-eslint/eslint-plugin": "^6.7.3",
         "@typescript-eslint/parser": "^6.7.3",
         "@vitejs/plugin-react-swc": "^3.3.2",
+        "@vitest/coverage-v8": "^1.0.2",
+        "@vitest/ui": "^1.0.2",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.50.0",
         "eslint-config-prettier": "^9.0.0",
