--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
-DATABASE_URL
-DB_USER
-DB_PASSWORD
+DABATESE_HOST=fincheck-db
+DATABASE_URL="postgresql://root:root@${DABATESE_HOST}:5432/fincheck?schema=public"
+JWT_SECRET=tokenjwt
+DB_USER=root
+DB_PASSWORD=root
