--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,8 @@
 # compiled output
 /dist
 /node_modules
+/.env
+/.docker
 
 # Logs
 logs
@@ -33,7 +35,3 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-#
-.env
-.docker
