--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
         "@nestjs/jwt": "^10.1.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/swagger": "^7.2.0",
         "@prisma/client": "^5.1.0",
         "@types/bcryptjs": "^2.4.2",
         "bcryptjs": "^2.4.3",
