--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-DABATESE_HOST=fincheck-db
-DATABASE_URL="postgresql://root:root@${DABATESE_HOST}:5432/fincheck?schema=public"
+DB_HOST=fincheck-db
+DATABASE_URL="postgresql://root:root@${DB_HOST}:5432/fincheck?schema=public"
 JWT_SECRET=tokenjwt
 DB_USER=root
 DB_PASSWORD=root
