--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,7 @@
-DB_HOST=fincheck-db
-DATABASE_URL="postgresql://root:root@${DB_HOST}:5432/fincheck?schema=public"
 JWT_SECRET=tokenjwt
+DB_HOST=fincheck-db
+DB_NAME=fincheck
 DB_USER=root
 DB_PASSWORD=root
+DB_PORT=5433
+DATABASE_URL="postgresql://root:root@${DB_HOST}:5432/fincheck?schema=public"
